--- a/app.json
+++ b/app.json
@@ -28,5 +28,17 @@
     }
   },
 
+  "formation": {
+    "web": {
+      "quantity": 1,
+      "size": "free"
+    },
+
+    "worker": {
+      "quantity": 1,
+      "size": "free"
+    }
+  },
+
   "stack": "heroku-20"
 }
