--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "Among-Us-Heroku",
   "description": "This is a [Heroku Buildpack](https://devcenter.heroku.com/articles/buildpacks) for running a [Imposter server](https://github.com/Impostor/Impostor) in a [dyno](https://devcenter.heroku.com/articles/dynos) using [PlayIt](https://playit.gg) .",
-  "main": "opt/proxy.js",
+  "main": "bin/proxy.js",
   "scripts": {
-    "start": "node --trace-warnings --unhandled-rejections=strict opt/proxy.js"
+    "start": "node --trace-warnings --unhandled-rejections=strict bin/proxy.js"
   },
   "repository": {
     "type": "git",
